[project]
name = "yt-investing-kb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yt-dlp==2024.11.4",
]

[dependency-groups]
dev = [
    "pre-commit==4.0.1",
    "pytest==8.3.3",
    "black==24.3.0",
    "isort==5.13.2",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "W"]
fix = true
