[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-investing-kb"
version = "0.1.0"
authors = [
    { name = "abatutin", email = "abatutin@gmail.com" },
]
description = "YouTube Investing Knowledge Base"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]


[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yt_investing_kb"]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
]
